--- a/Apps/Anaconda3/docker-compose.yml
+++ b/Apps/Anaconda3/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - JUPYTER_PORT=8888
       - JUPYTER_PASSWORD=password
       - JUPYTER_LOGS=/data/jupyter.log
-    command: /bin/bash -c "jupyter lab --no-browser --ip 0.0.0.0 --port $JUPYTER_PORT --notebook-dir $JUPYTER_ROOT --allow-root &> $JUPYTER_LOGS" & timeout 5 tail -f $JUPYTER_LOGS
+    command: jupyter lab --no-browser --ip 0.0.0.0 --port $JUPYTER_PORT --notebook-dir $JUPYTER_ROOT --allow-root &> $JUPYTER_LOGS
     ports:
       - target: 8888
         published: "8888"
