--- a/Apps/Anaconda3/docker-compose.yml
+++ b/Apps/Anaconda3/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       - JUPYTER_PORT=8888
       - JUPYTER_PASSWORD=password
       - JUPYTER_LOGS=/data/jupyter.log
-    command: jupyter lab --no-browser --ip 0.0.0.0 --port $JUPYTER_PORT --notebook-dir $JUPYTER_ROOT --allow-root &> $JUPYTER_LOGS
     ports:
       - target: 8888
         published: "8888"
@@ -56,7 +55,7 @@ x-vionetaos:
   scheme: http
   hostname: ""
   port_map: "8888"
-  index: /
+  index: /lab
   description:
     en_us: Your machine learning Env work with Jupyter Lab
   tagline:
