fix vassist and juypyter

--- a/Apps/Anaconda3/docker-compose.yml
+++ b/Apps/Anaconda3/docker-compose.yml
@@ -4,12 +4,13 @@ services:
     container_name: anaconda3
     image: vioneta/jupyterlab:r35.5.0
     network_mode: bridge
-    # restart: unless-stopped
+    restart: unless-stopped
     environment:
       - JUPYTER_ROOT=/data
       - JUPYTER_PORT=8888
       - JUPYTER_PASSWORD=nvidia
       - JUPYTER_LOGS=/data/jupyter.log
+    command: /bin/bash
     ports:
       - target: 8888
         published: "8888"
