--- a/Apps/Anaconda3/docker-compose.yml
+++ b/Apps/Anaconda3/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     environment:
       - JUPYTER_ROOT=/data
       - JUPYTER_PORT=8888
-      - JUPYTER_PASSWORD=vioneta
+      - JUPYTER_PASSWORD=nvidia
       - JUPYTER_LOGS=/data/jupyter.log
-    command: /bin/bash
+    # command: /bin/bash -c "jupyter lab --no-browser --ip 0.0.0.0 --port $JUPYTER_PORT --notebook-dir $JUPYTER_ROOT --allow-root "
     ports:
       - target: 8888
         published: "8888"
