--- a/Apps/VFlow/docker-compose.yml
+++ b/Apps/VFlow/docker-compose.yml
@@ -21,17 +21,17 @@ services:
         type: none
         o: bind
         device: /DATA/AppData/$AppID/data
-  x-vionetaos:
-    ports:
-      - container: "1880"
-        description:
-          en_us: ""
+  # x-vionetaos:
+  #   ports:
+  #     - container: "1880"
+  #       description:
+  #         en_us: ""
 
-    volumes:
-      - container: /data
-        description:
-          en_us: ""
-  container_name: vflow
+  #   volumes:
+  #     - container: /data
+  #       description:
+  #         en_us: ""
+  # container_name: vflow
 x-vionetaos:
   architectures:
     - amd64
