--- a/Apps/VFlow/docker-compose.yml
+++ b/Apps/VFlow/docker-compose.yml
@@ -14,24 +14,24 @@ services:
     restart: always
     volumes:
       - data:/data
-  volumes:
-    data:
-      driver: local
-      driver_opts:
-        type: none
-        o: bind
-        device: /DATA/AppData/$AppID/data
-  # x-vionetaos:
-  #   ports:
-  #     - container: "1880"
-  #       description:
-  #         en_us: ""
+volumes:
+  data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /DATA/AppData/$AppID/data
+  x-vionetaos:
+    ports:
+      - container: "1880"
+        description:
+          en_us: ""
 
-  #   volumes:
-  #     - container: /data
-  #       description:
-  #         en_us: ""
-  # container_name: vflow
+    volumes:
+      - container: /data
+        description:
+          en_us: ""
+  container_name: vflow
 x-vionetaos:
   architectures:
     - amd64
